# resolution-python-week-1

./: .gitignore  LICENSE  pyproject.toml  readme.md
src/resolution_week1_frogtospace/: main.py
